<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:text="@string/Title" 
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="120dp"
        android:layout_height="178dp"
        android:layout_alignLeft="@+id/Title"
        android:layout_below="@+id/Title"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_toRightOf="@+id/thumbnail"
        android:orientation="vertical"
        android:layout_below="@+id/Title"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp">
        
        	<TextView
        	android:id="@+id/Year"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/year" 
            android:textSize="@dimen/font_medium"
	    	android:textColor="@color/green_dark" />
        	
        	<TextView
        	android:id="@+id/mpaa_rating"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/mpaa_rating" 
            android:textSize="@dimen/font_medium"
	    	android:textColor="@color/green_dark" />
        	
        	<TextView
        	android:id="@+id/runtime"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/runtime" 
            android:textSize="@dimen/font_medium"
	    	android:textColor="@color/green_dark" />

   	</LinearLayout>

</RelativeLayout>